TST-1031 Fixed issue with items wrapping and overlapping in header

--- a/assets/scss/custom/layout/_header.scss
+++ b/assets/scss/custom/layout/_header.scss
@@ -229,6 +229,9 @@
                         display:flex;
                         justify-content:flex-end;
                         padding:0.75rem 0;
+                        span {
+                            text-transform: lowercase;
+                        }
                         &>div {
                             align-items:center;
                             display:flex;
@@ -274,15 +277,12 @@
                 padding-bottom:0;
                 padding-top:0;
                 .header-logo {
-                    flex-basis: 30%;
+                    flex-basis: 20%;
                     margin: 0px;
                     &.header-logo-desktop {
                         display: flex;
-                        margin: -3rem auto 0;
+                        margin: -3rem 0 0;
                         overflow: visible;
-                       .header-logo-image {
-                         max-width: none;
-                       }
                     }
                     &.header-logo-mobile {
                         display: none;
@@ -386,11 +386,15 @@
         .fa-caret-down {
             display: none;
         }
+        .navPages-list {
+            flex-wrap: wrap;
+        }
         .header-top-links {
             align-items: center;
             color: $text-gray;
             display: flex;
             justify-content: flex-end;
+            margin-top: -4rem;
             max-width: 125px;
             width: 100%;
             .fa-lg {
